# challenge

./: AppController.php  Notification.php  README  attributions.txt
configs/: module.ini
constant/: module.php
controllers/: AdminController.php  CompetitorController.php  ConfigController.php  IndexController.php
controllers/components/: ApiComponent.php
controllers/forms/: ConfigForm.php
database/mysql/: 0.0.1.sql
database/pgsql/: 0.0.1.sql
database/upgrade/: 0.0.10.php  0.0.2.php  0.0.3.php  0.0.4.php  0.0.5.php  0.0.6.php  0.0.7.php  0.0.8.php  0.0.9.php  0.1.0.php  0.1.1.php  0.1.10.php  0.1.11.php  0.1.12.php  0.1.13.php  0.1.14.php  0.1.15.php  0.1.16.php  0.1.17.php  0.1.2.php  0.1.3.php  0.1.4.php  0.1.5.php  0.1.6.php  0.1.7.php  0.1.8.php  0.1.9.php
models/: AppDao.php  AppModel.php
models/base/: ChallengeModelBase.php  CompetitorModelBase.php  EnabledCommunityModelBase.php  MetricModelBase.php  ResultsRunItemModelBase.php  ResultsRunModelBase.php  SelectedMetricModelBase.php
models/dao/: ChallengeDao.php  CompetitorDao.php  EnabledCommunityDao.php  MetricDao.php  ResultsRunDao.php  ResultsRunItemDao.php  SelectedMetricDao.php
models/pdo/: ChallengeCommunityModel.php  ChallengeModel.php  CompetitorModel.php  EnabledCommunityModel.php  MetricModel.php  ResultsRunItemModel.php  ResultsRunModel.php  SelectedMetricModel.php
public/css/: jquery.dataTables.css
tests/: CMakeLists.txt
tests/controllers/: CMakeLists.txt
tests/models/: CMakeLists.txt
tests/models/base/: CMakeLists.txt  ChallengeModelTest.php
translation/: fr-main.csv
(+35 files in other folders)
